--- a/core/src/main/res/layout/skeleton_layout.xml
+++ b/core/src/main/res/layout/skeleton_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         style="@style/AppCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,5 +70,5 @@
                 </LinearLayout>
             </com.deep.app.abstraction.ShimmerSkeletonView>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </layout>
